Рефакторинг и обновление бибилиотек и конфигураций 09.2024